# oxipng

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  MANUAL.txt  README.md  SECURITY.md
.github/workflows/: deploy.yml  docker.yml  oxipng.yml
benches/: filters.rs  interlacing.rs  reductions.rs  strategies.rs  zopfli.rs
src/: apng.rs  atomicmin.rs  cli.rs  colors.rs  error.rs  evaluate.rs  filters.rs  headers.rs  interlace.rs  lib.rs  main.rs  options.rs  sanity_checks.rs
src/deflate/: deflater.rs  mod.rs  zopfli_oxipng.rs
src/filters/: mod.rs  strategies.rs
src/png/: mod.rs  scan_lines.rs
src/reduction/: alpha.rs  bit_depth.rs  color.rs  interlace.rs  mod.rs  palette.rs
tests/: alpha.rs  filters.rs  flags.rs  interlaced.rs  interlacing.rs  lib.rs  raw.rs  reduction.rs  regression.rs  strategies.rs
xtask/: Cargo.toml
